e2undo: add "-o offset" option to specify the filesystem offset
This is useful if the filesystem is located at an arbitrary
offset instead of the beginning of a device or file.

Signed-off-by: Marcus Huewe <suse-tux@gmx.de>
Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/misc/e2undo.8.in
+++ b/misc/e2undo.8.in
@@ -46,6 +46,11 @@ Display a usage message.
 .B \-n
 Dry-run; do not actually write blocks back to the filesystem.
 .TP
+.BI \-o " offset"
+Specify the filesystem's
+.I offset
+(in bytes) from the beginning of the device or file.
+.TP
 .B \-v
 Report which block we're currently replaying.
 .SH AUTHOR
