--- a/misc/tune2fs.8.in
+++ b/misc/tune2fs.8.in
@@ -546,8 +546,15 @@ Use hashed b-trees to speed up lookups for large directories.
 .B dir_nlink
 Allow more than 65000 subdirectories per directory.
 .TP
+.B encrypt
+Enable file system level encryption.
+.B Tune2fs
+currently only supports setting this filesystem feature.
+.TP
 .B extent
 Enable the use of extent trees to store the location of data blocks in inodes.
+.B Tune2fs
+currently only supports setting this filesystem feature.
 .TP
 .B extra_isize
 Enable the extended inode fields used by ext4.
@@ -576,14 +583,14 @@ Support files larger than 2 terabytes in size.
 .B large_file
 Filesystem can contain files that are greater than 2GB.
 .TP
-.B resize_inode
-Reserve space so the block group descriptor table may grow in the
-future.
-.B Tune2fs 
-only supports clearing this filesystem feature.
+.B metadata_csum
+Store a checksum to protect the contents in each metadata block.
 .TP
 .B mmp
 Enable or disable multiple mount protection (MMP) feature.
+.TP
+.B project
+Enable project ID tracking.  This is used for project quota tracking.
 .TP
 .B quota
 Enable internal file system quota inodes.
@@ -591,14 +598,22 @@ Enable internal file system quota inodes.
 .B read-only
 Force the kernel to mount the file system read-only.
 .TP
+.B resize_inode
+Reserve space so the block group descriptor table may grow in the
+future.
+.B Tune2fs
+only supports clearing this filesystem feature.
+.TP
 .B sparse_super
 Limit the number of backup superblocks to save space on large filesystems.
+.B Tune2fs
+currently only supports setting this filesystem feature.
 .TP
 .B uninit_bg
 Allow the kernel to initialize bitmaps and inode tables lazily, and to
 keep a high watermark for the unused inodes in a filesystem, to reduce
 .BR e2fsck (8)
-time.  This first e2fsck run after enabling this feature will take the
+time.  The first e2fsck run after enabling this feature will take the
 full time, but subsequent e2fsck runs will take only a fraction of the
 original time, depending on how full the file system is.
 .RE
@@ -610,8 +625,9 @@ After setting or clearing
 or
 .B resize_inode
 filesystem features,
+the file system may require being checked using
 .BR e2fsck (8)
-must be run on the filesystem to return the filesystem to a consistent state.
+to return the filesystem to a consistent state.
 .B Tune2fs
 will print a message requesting that the system administrator run
 .BR e2fsck (8)
@@ -724,7 +740,7 @@ WARNING: The undo file cannot be used to recover from a power or system crash.
 .SH BUGS
 We haven't found any bugs yet.  That doesn't mean there aren't any...
 .SH AUTHOR
-.B tune2fs 
+.B tune2fs
 was written by Remy Card <Remy.Card@linux.org>.  It is currently being
 maintained by Theodore Ts'o <tytso@alum.mit.edu>.
 .B tune2fs
