e2fsck: use com_err error codes instead of EBADMSG and EUCLEAN
Some operating systems may not define EBADMSG and EUCLEAN, so for
better portability use our own private error code numbers.

Signed-off-by: Theodore Ts'o <tytso@mit.edu>

--- a/lib/ext2fs/ext2_err.et.in
+++ b/lib/ext2fs/ext2_err.et.in
@@ -530,4 +530,10 @@ ec	EXT2_ET_UNDO_FILE_CORRUPT,
 ec	EXT2_ET_UNDO_FILE_WRONG,
 	"Wrong undo file for this filesystem"
 
+ec	EXT2_ET_FILESYSTEM_CORRUPTED,
+	"File system is corrupted"
+
+ec	EXT2_ET_BAD_CRC,
+	"Bad CRC detected in file system"
+
 	end
