--- a/debian/control.in
+++ b/debian/control.in
@@ -11,6 +11,15 @@ Build-Depends: gettext, texinfo, pkg-config, gcc-multilib [mips mipsel], libfuse
 Standards-Version: 3.9.8
 Homepage: http://e2fsprogs.sourceforge.net
 
+Package: fuse2fs
+Priority: optional
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: any
+Description: ext2 / ext3 / ext4 file system driver for FUSE
+ fuse2fs is a FUSE file system client that supports reading and
+ writing from devices or image files containing ext2, ext3, and ext4
+ file systems.
+
 ifdef(`E2FSCK_STATIC',``
 Package: e2fsck-static
 Priority: optional
@@ -250,6 +259,7 @@ Multi-Arch: foreign
 Suggests: gpart, parted, e2fsck-static
 Conflicts: dump (<< 0.4b4-4), quota (<< 1.55-8.1), initscripts (<< 2.85-4), sysvinit (<< 2.85-4)
 Replaces: hurd (<= 20040301-1), libblkid1 (<< 1.38+1.39-WIP-2005.12.10-2), libuuid1 (<< 1.38+1.39-WIP-2005.12.10-2)
+Recommends: fuse2fs
 Architecture: any
 Description: ext2/ext3/ext4 file system utilities
  The ext2, ext3 and ext4 file systems are successors of the original ext
