e2fsck: improve error messages when the journal sb is corrupt
If the journal superblock is corrupt and the user declines to fix it
(or runs e2fsck -n), make sure the error messages are clear and
explain that e2fsck cannot (safely) proceed.

Addresses-Debian-Bug: #768162

Signed-off-by: Theodore Ts'o <tytso@mit.edu>
(cherry picked from commit d37026ea07a6abcb0bbff8d97e58b47e8089df8e)

--- a/lib/ext2fs/ext2_err.et.in
+++ b/lib/ext2fs/ext2_err.et.in
@@ -536,4 +536,7 @@ ec	EXT2_ET_FILESYSTEM_CORRUPTED,
 ec	EXT2_ET_BAD_CRC,
 	"Bad CRC detected in file system"
 
+ec	EXT2_ET_CORRUPT_JOURNAL_SB,
+	"The journal superblock is corrupt"
+
 	end
